--- a/data/config.json
+++ b/data/config.json
@@ -1,4 +1,4 @@
 {
-"user_token" : "Please insert your token here",
-"channel_id" : "Please insert the preferred channel's id here"
+"user_token" : "NTQ5MjEzNTUxMjM2MDg3ODA4.Ych4_Q.--W7wAWp20TwPWJu0oXlUGceu7I",
+"channel_id" : "864537193510993953"
 }
