--- a/data/config.json
+++ b/data/config.json
@@ -1,4 +1,4 @@
 {
-"user_token" : "NTQ5MjEzNTUxMjM2MDg3ODA4.Ych4_Q.--W7wAWp20TwPWJu0oXlUGceu7I",
-"channel_id" : "864537193510993953"
+"user_token" : "",
+"channel_id" : ""
 }
